--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ backon = "1.6.0"
 bytes = { version = "1.11.0", features = ["serde"] }
 http = "1.4.0"
 humantime = "2.3.0"
+opentelemetry = { version = "0.31.0", features = ["metrics", "trace", "logs"] }
+opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "trace", "logs", "grpc-tonic"] }
+opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "trace", "logs"] }
 regex = { version = "1.12.2", default-features = false, features = ["std"] }
 reqwest = { version = "0.13.1", default-features = false, features = [
     "brotli",
